--- a/zips/Makefile
+++ b/zips/Makefile
@@ -12,6 +12,15 @@ gcc::
 	cp -vp unzip60/*.exe bin/gcc/
 	bin/gcc/zip -v | grep -i blowfish
 	bin/gcc/unzip -v | grep -i blowfish
+	make gcc-test
+	make gcc-clean
+
+gcc-clean::
+	@echo == cleaning gcc files
+	cd zip30       && make -f win32/makefile.gcc clean
+	cd unzip60     && make -f win32/makefile.gcc clean
+
+gcc-test::
 	bin/gcc/zip   --blowfish -Duro -P pass x.zip bin/gcc/*.exe
 	        zip              -Duro -P pass x.zip Makefile
 	@echo ========== Plain unzip will say 'incorrect password' for exe
@@ -19,6 +28,4 @@ gcc::
 	@echo ========== blowfish unzip will say OK for exe
 	bin/gcc/unzip            -vt   -P pass x.zip || true
 	bin/gcc/unzip --blowfish -vt   -P pass x.zip || true
-	@echo == cleaning
-	cd zip30   && make -f win32/makefile.gcc clean
-	cd unzip60 && make -f win32/makefile.gcc clean
+
