--- a/zips/zip30/win32/vs9/zip.vcproj
+++ b/zips/zip30/win32/vs9/zip.vcproj
@@ -44,6 +44,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				PreprocessorDefinitions="WIN32;NO_ASM;_DEBUG"
+				GeneratePreprocessedFile="0"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
