--- a/zips/unzip60/Makefile
+++ b/zips/unzip60/Makefile
@@ -1,5 +1,5 @@
 # Makefile to build and test blowfish-zip-unzip with vs9 on windows xp + cygwin
-# $Header: c:/cvs/repo/src/zips/unzip61/Makefile,v 1.33 2014-01-27 15:34:30 a Exp $
+# $Header: c:/cvs/repo/github/bfz/zips/unzip60/Makefile,v 1.1 2014-02-04 11:24:52 a Exp $
 
 # Check for msvc9 compiler.
 CL_VER := $(shell cl.exe /? 2>&1 | perl -nle 'print "$$1" if m/Version.(\d+)/')
@@ -12,12 +12,23 @@ ifneq ($(IS_VC9),1)
   $(warn Use set-vs9.bat msvc compile, found $(CL_VER))
 endif
 
-vs9exe::
-	devenv win32/vs9/unzip.sln /Build "Debug|Win32" /Project unzip
-	cp ./win32/vs9/unzip__Win32_Debug/unzip.exe $$TMP/bf-unzip.exe
-	$$TMP/bf-unzip.exe | grep -i Blowfish
+vs9bin=$(shell cygpath -wam ../bin/$(dir $(lastword $(MAKEFILE_LIST)))/vs9)
+gccbin=$(shell cygpath -wam ../bin/$(dir $(lastword $(MAKEFILE_LIST)))/gcc)
+CTMP=$(shell cygpath -wam $$TMP)
+bb=--blowfish --blowfish
 
-nmake::
+vs9exe::
+	@echo =========================================
+	devenv win32/vs9/unzip.sln /Build "Debug|Win32" /Project unzip
+	@echo =========================================
+	cp -vp ./win32/vs9/unzip__Win32_Debug/unzip.exe $(vs9bin)/
+	@echo =========================================
+	$(vs9bin)/unzip.exe | grep -i Blowfish
+ifeq (0,${MAKELEVEL})
+	cd ../zip30/ && make vs9exe
+endif
+
+gcc::
 	nmake -f win32/makefile
 
 clean::
@@ -25,28 +36,21 @@ clean::
 	rm -rfv win32/{vc6,vs9}/{*.opt,*.ncb,*.plg,*.suo}
 	rm -rfv win32/vc6/{Debug,Release}
 	rm -rfv win32/vs9/*_Win32_*/
+	rm -rfv win32/cb12/{Debug,Release}/
 
-msdev:
 	@echo run mosh.cmd to set env
 	msdev ./win32/vc6/unzip.dsw &
 
 debug::
+	@echo make debug
 ifeq (0,${MAKELEVEL})
 	cd ../zip30/ && make vs9exe
 endif
-	@set -xv ;\
-	make vs9exe ;\
-	cd $$TMP ;\
-	echo "===== unzip will print INCORRECT" ;\
-	unzip.exe      -vtP x b.zip ;\
-	echo "===== bf-unzip will print OK" ;\
-	./bf-unzip.exe --blowfish -vtP x b.zip ;\
-	ls -l ?.* ;\
-	echo "NOW devenv > debug > unzip -vtP x b.zip in $$TMP"
-
-regr:
-	cd ../zip30 && make regr
-
-tags::
-	ctags --exclude=*.i -R . ../zip30 &
+	make vs9exe
+	@echo =========================================
+	@echo "#  === unzip must print INCORRECT"
+	unzip.exe      -vtP pass $(CTMP)/b.zip || true
+	@echo =========================================
+	@echo "#  === $(vs9bin)/unzip must print OK"
+	$(vs9bin)/unzip.exe $(bb) -vtP pass $(CTMP)/b.zip || true
 
