--- a/python/Makefile
+++ b/python/Makefile
@@ -21,28 +21,6 @@ else
   SHELL=bash
 endif
 
-
-motp::
-	echo 'user1="aws1:JBSWY3DPEHPK3PXP"' > $@.1.tmp
-	echo '       aws2:JBSW Y3DP EHPK 3PXP' >> $@.1.tmp
-	echo '       aws3:ZZZZ Y3DP EHPK 3PXP' >> $@.1.tmp
-	python $@.py -v --fileenc $@.1.tmp  $@.2.tmp fkey
-	python $@.py -v --filedec $@.2.tmp  $@.3.tmp fkey
-	python $@.py -v --keydec  $@.2.tmp  user1        fkey
-	python $@.py -v --totp    $@.2.tmp  aws          fkey
-	# more *.tmp | cat -
-	tail -n +1 *.tmp
-	rm *.tmp
-
-gpgotp::
-	echo aws1:MZXW633PN5XW 6MZX   > $@.txt
-	echo aws2:ZZXW6 33PN5XW6MZX  >> $@.txt
-	echo aws3:MZXW6 33PN5XW 6MZX >> $@.txt
-	gpg -o $@.gpg --passphrase fkey --batch --yes -qc $@.txt
-	gpg           --passphrase fkey --batch --yes -qd $@.gpg | grep aws1
-	python $@.py aws1 $@.gpg fkey
-	rm $@.txt $@.gpg
-
 #@ PYTHON
 py-ver::
 	@echo PYTHON=$(PYTHON)
@@ -60,3 +38,27 @@ tags::
 	  --exclude=.idea \
 	  --exclude=__pycache__    \
 	  -R .
+
+#@ Programs
+
+motp::
+	echo 'user1="aws1:JBSWY3DPEHPK3PXP"' > $@.1.tmp
+	echo '       aws2:JBSW Y3DP EHPK 3PXP' >> $@.1.tmp
+	echo '       aws3:ZZZZ Y3DP EHPK 3PXP' >> $@.1.tmp
+	python $@.py -v --fileenc $@.1.tmp  $@.2.tmp fkey
+	python $@.py -v --filedec $@.2.tmp  $@.3.tmp fkey
+	python $@.py -v --keydec  $@.2.tmp  user1        fkey
+	python $@.py -v --totp    $@.2.tmp  aws          fkey
+	# more *.tmp | cat -
+	tail -n +1 *.tmp
+	rm *.tmp
+
+gpg-otp::
+	echo aws1:MZXW633PN5XW 6MZX   > $@.txt
+	echo aws2:ZZXW6 33PN5XW6MZX  >> $@.txt
+	echo aws3:MZXW6 33PN5XW 6MZX >> $@.txt
+	gpg -o $@.gpg --passphrase fkey --batch --yes -qc $@.txt
+	gpg           --passphrase fkey --batch --yes -qd $@.gpg | grep aws1
+	python $@.py aws1 $@.gpg fkey
+	rm $@.txt $@.gpg
+
